--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "node": "14.x",
     "npm": "6.14.x"
-},
+  },
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.1.2",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "mongoose": "^5.13.7"
   },
