--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
